--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,6 +3,6 @@
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
-ko_fi: https://ko-fi.com/vlade11115
+ko_fi: vlade11115 (на хостинг сайта)
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 custom: # Replace with a single custom sponsorship URL
